<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="POU_FinDeCiclo" Id="{d63d9367-255f-4c24-a9b7-23ae1156f199}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM POU_FinDeCiclo
VAR
	CONDICIONESPARO: CONDICIONESPARO;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Cuando el operario pulsa fin de ciclo, se deja de ejecutar el bON de Main, saltando únicamente a este POU que controla el apagado 
progresivo de los diferentes POUs *)

GVL_General.sBeltConveyor.bSortingCintaInicial := FALSE;
GVL_General.sBeltConveyor.bSortingCintaEntrada := FALSE;	

//FALTA EL DEL ALMACÉN DE SACAR CAJAS
	
IF POU_Contadores.bGuardandoCaja THEN
	PRG_Almacen();
	fb_ApagadoCintas();
	GVL_ProcesoPalet.sRollerConveyor.bRollerAlmacen1 := FALSE;
	GVL_ProcesoPalet.sRollerConveyor.bRollerAlmacen2 := FALSE;
	GVL_ProcesoPalet.sRollerConveyor.bCurvedRollerAlmacen := FALSE;	
	
ELSIF POU_Contadores.iProcesandoCintas > 0 THEN
	FB_RollerConveyors();
	
ELSIF POU_Contadores.iCajaProcesando > 0 THEN	
	fb_ApagadoCintas();
	PRG_LlenadoCajas();
	PRG_Turntable();
	FB_RollerConveyors();
	
ELSIF POU_Contadores.iStackBoxProcesando > 0 THEN
	fb_ApagadoCintas();
	POU_PickAndPlace();
	POU_PositionerAzul();
	POU_Parada();
	FB_RollerConveyors();

ELSIF POU_Contadores.iCintaProcesando > 0 THEN
	POU_OnFabrica();
	POU_ProcesoEntrada();
	FB_RollerConveyors();	
END_IF 
]]></ST>
    </Implementation>
    <LineIds Name="POU_FinDeCiclo">
      <LineId Id="818" Count="0" />
      <LineId Id="821" Count="1" />
      <LineId Id="1000" Count="2" />
      <LineId Id="824" Count="0" />
      <LineId Id="1020" Count="0" />
      <LineId Id="1045" Count="0" />
      <LineId Id="1022" Count="1" />
      <LineId Id="1076" Count="0" />
      <LineId Id="1109" Count="1" />
      <LineId Id="1108" Count="0" />
      <LineId Id="1111" Count="0" />
      <LineId Id="1095" Count="0" />
      <LineId Id="1104" Count="0" />
      <LineId Id="1113" Count="0" />
      <LineId Id="1024" Count="0" />
      <LineId Id="1070" Count="2" />
      <LineId Id="1105" Count="0" />
      <LineId Id="1077" Count="0" />
      <LineId Id="1080" Count="0" />
      <LineId Id="1102" Count="0" />
      <LineId Id="1083" Count="2" />
      <LineId Id="1106" Count="0" />
      <LineId Id="1035" Count="0" />
      <LineId Id="1030" Count="0" />
      <LineId Id="1053" Count="1" />
      <LineId Id="1107" Count="0" />
      <LineId Id="1021" Count="0" />
      <LineId Id="1091" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>