<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="POU_OnFabrica" Id="{0cb7f3fa-823d-4e17-9c09-7f7283f8c97d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM POU_OnFabrica
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL_General.sBeltConveyor.bSortingCintaInicial := TRUE;
GVL_General.sBeltConveyor.bSortingCintaEntrada := TRUE;
GVL_General.sBeltConveyor.bSortingCintaDistribucion := TRUE;

GVL_General.sBeltConveyor.bCintaAzul2 := TRUE;
GVL_General.sBeltConveyor.bCintaVerde2 := TRUE;
GVL_General.sBeltConveyor.bCintaMetal2 := TRUE;

GVL_ProcesoPalet.sRollerConveyor.bRollerAlmacen1 := TRUE;
GVL_ProcesoPalet.sRollerConveyor.bCurvedRollerAlmacen := TRUE;]]></ST>
    </Implementation>
    <LineIds Name="POU_OnFabrica">
      <LineId Id="64" Count="2" />
      <LineId Id="71" Count="2" />
      <LineId Id="63" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="79" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>